<resources>
    <string name="app_name">Healthmaster</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_submit">Submit</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="front_greeting">Welcome to Healthmaster!\nLog in or create an account below.</string>
    <string name="user_greeting">Welcome!\nWhat would you like to do?</string>
    <string name="anx_attack">I\'m having an Anxiety Attack!</string>
    <string name="symp_check">Check Symptoms</string>
    <string name="new_entry">New Entry</string>
    <string name="old_entries">Old Entries</string>
    <string name="settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="back">Go Back</string>
    <string name="allow_apptrack">Track Social Media Consumption</string>
    <string name="title_activity_symptom">SymptomActivity</string>

    <string name="anx_greeting">Examine and focus on your environment,\nthen record the following information:</string>
    <string name="look_five">Look at 5 Items:</string>
    <string name="touch_four">Touch 4 Items:</string>
    <string name="listen_three">Listen to 3 Sounds:</string>
    <string name="smell_two">Smell 2 Scents:</string>
    <string name="desc_sur">Describe your Surroundings:</string>

    <string name="old_title">Your Previous Entries</string>
    <string name="entries_txt"></string>

</resources>
